fix: wcag - contrasts and focus (AA)

--- a/src/pages/search-page/filter-tree/filter-tree.scss
+++ b/src/pages/search-page/filter-tree/filter-tree.scss
@@ -45,9 +45,15 @@
   }
   .checkbox {
     width: 100%;
+
     .checkbox_label {
       max-width: 90%;
       word-break: break-all;
+
+      input[type='checkbox']:focus + span {
+        outline-offset: 3px;
+        outline: 2px solid orange;
+      }
     }
   }
   /* rotate the triangle to close it */
